@@ -59,11 +59,10 @@ void menu_draw_timer(menu_st *menulist)
 			(diff - (menulist->timer_step % diff)));
 		/* xor the pixmap */
 		GrSetGCMode(menulist->menu_gc, GR_MODE_XOR);
-#ifndef IPOD	/* I assume this strangeness has something to do with the color
-		 * inverting differences in the microwindows drivers for x11
-		 * and the ipod */
-		GrSetGCForeground(menulist->menu_gc, WHITE);
-#endif
+		if(hw_version == 0 || hw_version >= 60000)
+		/* make sure that the xor works properly for devices with
+		 * fbrev turned off (host, photo) */
+			GrSetGCForeground(menulist->menu_gc, WHITE);
 		GrFillRect(menulist->pixmaps[menulist->pixmap_pos[item]],
 				menulist->menu_gc, move, 0,
 				menulist->w, menulist->height);
@@ -78,9 +77,9 @@ void menu_draw_timer(menu_st *menulist)
 				menulist->menu_gc, move, 0,
 				menulist->w, menulist->height);
 		GrSetGCMode(menulist->menu_gc, GR_MODE_SET);
-#ifndef IPOD /* see above ifndef */
-		GrSetGCForeground(menulist->menu_gc, BLACK);
-#endif		
+		if(hw_version == 0 || hw_version >= 60000)
+		/* reset fix for xor on certain devices (host, photo) */
+			GrSetGCForeground(menulist->menu_gc, BLACK);
 		return;
 	}
 	GrSetGCUseBackground(menulist->menu_gc, GR_FALSE);
@@ -198,11 +197,10 @@ void menu_draw_item(menu_st *menulist, int item)
 	/* xor the pixmap */
 	if(item == (menulist->sel - menulist->top_item)) {
 		GrSetGCMode(menulist->menu_gc, GR_MODE_XOR);
-#ifndef IPOD	/* I assume this strangeness has something to do with the color
-		 * inverting differences in the microwindows drivers for x11
-		 * and the ipod */
-		GrSetGCForeground(menulist->menu_gc, WHITE);
-#endif
+		if(hw_version == 0 || hw_version >= 60000)
+		/* make sure that the xor works properly for devices with
+		 * fbrev turned off (host, photo) */
+			GrSetGCForeground(menulist->menu_gc, WHITE);
 		GrFillRect(menulist->pixmaps[menulist->pixmap_pos[item]],
 				menulist->menu_gc, 0, 0, menulist->w,
 				menulist->height);
@@ -219,9 +217,9 @@ void menu_draw_item(menu_st *menulist, int item)
 				menulist->menu_gc, 0, 0, menulist->w,
 				menulist->height);
 		GrSetGCMode(menulist->menu_gc, GR_MODE_SET);
-#ifndef IPOD /* see above ifndef */
-		GrSetGCForeground(menulist->menu_gc, BLACK);
-#endif
+		if(hw_version == 0 || hw_version >= 60000)
+		/* reset fix for xor on certain devices (host, photo) */
+			GrSetGCForeground(menulist->menu_gc, BLACK);
 	}
 }
 
